Adjust padding on phase blocks; fix style issue with map time slider on Firefox

--- a/src/sass/partials/_graph.scss
+++ b/src/sass/partials/_graph.scss
@@ -5,10 +5,10 @@
   margin-bottom: 2rem;
   padding: 1.5rem 1rem 2rem;
   border-radius: .2rem;
-  background: #ddd;
+  background: #fff;
   font-family: "Hind", "Lato", "Arial", sans-serif;
   font-size: .7rem;
-  font-weight: bold;
+  font-weight: 700;
 
   h1 {
     font-size: 1.5rem;
@@ -19,7 +19,7 @@
 .uri-ticks-activity-graph {
 
   display: grid;
-  grid-template-columns: repeat( 13, 1fr );
+  grid-template-columns: repeat( 12, 1fr );
   grid-template-rows: 150px;
   grid-column-gap: 1%;
   align-items: end;
@@ -65,10 +65,17 @@
   }
 
   .uri-ticks-activity-label {
+
     position: relative;
     top: .7rem;
     text-align: center;
     transform: rotate(-90deg);
+    color: #555;
+
+    &.current {
+      color: #FF615D;
+    }
+
   }
 
 }
