--- a/src/sass/partials/_phases.scss
+++ b/src/sass/partials/_phases.scss
@@ -73,7 +73,7 @@
     }
 
     .phase-regions-list {
-      padding: 1.5rem 1.5rem 0;
+      padding: 1rem 1rem 0;
     }
 
     .phase-region {
@@ -83,7 +83,7 @@
     h1 {
       font-size: 1.8rem;
       margin-bottom: 0;
-      padding: 1.5rem;
+      padding: 1rem;
       background: #ddd;
     }
 
@@ -125,7 +125,7 @@
       display: grid;
       grid-template-columns: repeat( 2, 1fr );
       grid-column-gap: 1rem;
-      padding: 1.5rem;
+      padding: 1rem;
       background: #eee;
       border-bottom: 1px solid #ddd;
 
@@ -133,6 +133,7 @@
         font-size: .8rem;
         font-weight: 700;
         color: #555;
+        text-align: center;
       }
 
       img {
@@ -147,13 +148,25 @@
 
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 600px) {
 
   #uri-tick-phases-wrapper {
 
     .phases-list {
       grid-template-columns: repeat( 2, 1fr );
-      grid-column-gap: 2rem;
+      grid-column-gap: 1rem;
+    }
+
+  }
+
+}
+
+@media screen and (min-width: 900px) {
+
+  #uri-tick-phases-wrapper {
+
+    .phases-list {
+      grid-template-columns: repeat( 3, 1fr );
     }
 
   }
